<?xml version="1.0" encoding="utf-8"?>

<!-- Habilita fazer scroll para todos os elementos filho -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <!-- informações nome e cnpj -->
        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nome_da_empresa_configuracoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/minha_empresa"
                    android:textColor="#DE000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/cnpj_configuracoes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="CNPJ: 65464684548"
                    android:textColor="#99000000"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/rowDadosCadastrados"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView59"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dados_cadastrados"
                    android:textColor="#DE000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView60"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_dados"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_opcao_lista" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/rowSenha"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView61"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/senha"
                    android:textColor="#DE000000"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/textView62"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_senha"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_opcao_lista" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/rowServicos"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView63"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/servicos_cadastrados"
                    android:textColor="#DE000000"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView64"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editar_servicos"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_opcao_lista" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/rowSobre"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView65"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_gravity="center_vertical"
                android:text="@string/sobre_o_aplicativo"
                android:textColor="#DE000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView36"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                app:srcCompat="@drawable/ic_opcao_lista" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/rowAjuda"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView66"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_gravity="center_vertical"
                android:text="@string/ajuda"
                android:textColor="#DE000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView37"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_opcao_lista" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/rowSair"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView67"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:layout_gravity="center_vertical"
                android:text="@string/sair_do_aplicativo"
                android:textColor="#DE000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_opcao_lista" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>